--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
